单天添加基本可用。

--- a/app/src/main/res/drawable/add_option_no_pos_bkg.xml
+++ b/app/src/main/res/drawable/add_option_no_pos_bkg.xml
@@ -1,18 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@color/add_pos_default"></solid>
-        </shape>
-    </item>
-    <item
-        android:left="@dimen/bkg_line_width_negative"
-        android:right="@dimen/bkg_line_width_negative"
-        android:top="@dimen/bkg_line_width_negative">
-        <shape android:shape="rectangle">
-            <stroke
-                android:width="@dimen/bkg_line_width"
-                android:color="@color/primary"></stroke>
-        </shape>
-    </item>
-</layer-list>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@color/primary" android:state_checked="true" />
+    <item android:drawable="@drawable/add_option_no_pos_default" />
+</selector>
